--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -5,6 +5,6 @@
     <corners android:radius="3dp"/>
     <solid android:color="#312C2C"/>
     <stroke android:width="1dp"
-            android:color="#ABFFDF00"/>
+            android:color="#FFD700"/>
 
 </shape>
