--- a/app/src/main/res/drawable/main_character.xml
+++ b/app/src/main/res/drawable/main_character.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <bitmap android:src="@drawable/gray"></bitmap>
-    </item>
+
     <item>
         <bitmap android:src="@drawable/human_female"></bitmap>
     </item>
@@ -10,19 +8,16 @@
         <bitmap android:src="@drawable/pants_black"></bitmap>
     </item>
     <item>
-        <bitmap android:src="@drawable/robe_black_red"></bitmap>
+        <bitmap android:src="@drawable/middle_brown"/>
     </item>
     <item>
-        <bitmap android:src="@drawable/aragorn"></bitmap>
+        <bitmap android:src="@drawable/boromir"></bitmap>
     </item>
     <item>
-        <bitmap android:src="@drawable/glove_red"></bitmap>
+        <bitmap android:src="@drawable/short_black_hair"></bitmap>
     </item>
     <item>
-        <bitmap android:src="@drawable/short_red"/>
-    </item>
-    <item>
-        <bitmap android:src="@drawable/scythe_slant"></bitmap>
+        <bitmap android:src="@drawable/long_sword_slant"></bitmap>
     </item>
 
 </layer-list>
