--- a/app/src/main/res/drawable/popup_background.xml
+++ b/app/src/main/res/drawable/popup_background.xml
@@ -5,6 +5,6 @@
     <corners android:radius="10dp"/>
     <solid android:color="#312C2C"/>
     <stroke android:width="4dp"
-            android:color="#ABFFDF00"/>
+            android:color="#FFD700"/>
 
 </shape>
