--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         <ImageView android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="75dp"
-                   android:src="@drawable/main_character"
+                   android:src="@drawable/death_knight"
                    android:layout_weight="1"/>
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
