--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,11 +47,24 @@
                   android:layout_height="match_parent"
                   android:background="@drawable/main_background"
                   android:orientation="horizontal">
-        <ImageView android:layout_width="0dp"
-                   android:layout_height="match_parent"
-                   android:padding="75dp"
-                   android:src="@drawable/death_knight"
-                   android:layout_weight="1"/>
+        <LinearLayout android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:orientation="vertical"
+                      android:layout_height="match_parent">
+            <Button android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textColor="@color/whiteText"
+                    android:layout_margin="8dp"
+                    android:textSize="14sp"
+                    android:id="@+id/changeCharacter"
+                    android:background="@drawable/trim_background"
+                    android:text="@string/change_character"/>
+            <ImageView android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:id="@+id/characterPhoto"
+                       android:padding="75dp"
+                       android:src="@drawable/human"/>
+        </LinearLayout>
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:orientation="vertical"
@@ -64,37 +77,32 @@
                       android:text="@string/quests"
                       android:textSize="30sp"/>
             <Button android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textColor="@color/whiteText"
                     android:layout_margin="8dp"
                     android:textSize="14sp"
                     android:id="@+id/quest1"
                     android:background="@drawable/trim_background"
-                    android:text="Quest 1"/>
+                    android:text="@string/quest_1"/>
             <Button android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textColor="@color/whiteText"
                     android:layout_margin="8dp"
                     android:textSize="14sp"
                     android:id="@+id/quest2"
                     android:background="@drawable/trim_background"
-                    android:text="Quest 2"/>
+                    android:text="@string/quest_2"/>
             <Button android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textColor="@color/whiteText"
                     android:layout_margin="8dp"
                     android:id="@+id/quest3"
                     android:textSize="14sp"
                     android:background="@drawable/trim_background"
-                    android:text="Quest 3"/>
-            <Button android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/whiteText"
-                    android:layout_margin="8dp"
-                    android:id="@+id/quest4"
-                    android:textSize="14sp"
-                    android:background="@drawable/trim_background"
-                    android:text="Quest 4"/>
+                    android:text="@string/quest_3"/>
         </LinearLayout>
 
     </LinearLayout>
