--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,19 +51,45 @@
                       android:layout_weight="1"
                       android:orientation="vertical"
                       android:layout_height="match_parent">
-            <Button android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:textColor="@color/whiteText"
-                    android:layout_margin="8dp"
-                    android:textSize="14sp"
-                    android:id="@+id/changeCharacter"
-                    android:background="@drawable/trim_background"
-                    android:text="@string/change_character"/>
-            <ImageView android:layout_width="match_parent"
-                       android:layout_height="match_parent"
-                       android:id="@+id/characterPhoto"
-                       android:padding="75dp"
-                       android:src="@drawable/human"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="50dp"
+                          android:orientation="horizontal">
+                <Button android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/whiteText"
+                        android:layout_margin="8dp"
+                        android:textSize="14sp"
+                        android:id="@+id/changeCharacter"
+                        android:background="@drawable/trim_background"
+                        android:text="@string/change_character"/>
+                <Button android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/whiteText"
+                        android:layout_margin="8dp"
+                        android:textSize="14sp"
+                        android:id="@+id/buyCharacter"
+                        android:background="@drawable/trim_background"
+                        android:text="@string/buy_character"/>
+
+            </LinearLayout>
+            <RelativeLayout android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                <ImageView android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:id="@+id/characterPhoto"
+                           android:padding="75dp"
+                           android:src="@drawable/human"/>
+                <TextView android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:textColor="@color/goldText"
+                          android:padding="8dp"
+                          android:textSize="30sp"
+                          android:id="@+id/gold2000Text"
+                          android:gravity="center"
+                          android:textStyle="bold"/>
+            </RelativeLayout>
         </LinearLayout>
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="match_parent"
